# airs

./: Cargo.toml  README.md
src/: ai.rs  cli.rs  config.rs  io.rs  main.rs  openai_shared.rs  openai_v1_chat.rs  openai_v1_image.rs  profile.rs
