[package]
name = "airs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
is-terminal = "0.4.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

